src/main/java/com/example/test/omnivore2trendithon2025/global/error/exception/AuthGroupException.java
package com.example.test.omnivore2trendithon2025.global.error.exception;

public abstract class AuthGroupException extends RuntimeException{
    public AuthGroupException(String message) {
        super(message);
    }
}
